--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -17,7 +17,7 @@ body, html {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('../public/home_bgimg.jpeg') center/cover no-repeat; /* Adjust as needed */
+    background: url('/home_bgimg.jpeg') center/cover no-repeat; /* Adjust as needed */
     z-index: -1; 
   }
   
@@ -32,6 +32,7 @@ body, html {
       background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
       padding: 25px;
       border-radius: 10px;
+      margin-bottom: 30%;
     }
     
     .centered-box h1 {
