--- a/frontend/src/components/Login-pages/Patient-login/PatientLogin.css
+++ b/frontend/src/components/Login-pages/Patient-login/PatientLogin.css
@@ -126,14 +126,11 @@
 
 /* Image overlay styles */
 .image-overlay {
-    /* position: absolute;
+    position: absolute;
+    top: -100px; /* Adjust positioning as needed */
     left: 300px; /* Adjust positioning as needed */
-    nav-down: 40px;
     font-weight: bold; /* to make the text bold */
-    padding-top: 1.2rem;
-    margin-top: absolute;
-    /* position: absolute; */
-
+    padding-top: 0.5rem;
 }
 
 .image-overlay h2 {
