--- a/frontend/src/components/Register-page/Register.css
+++ b/frontend/src/components/Register-page/Register.css
@@ -11,7 +11,9 @@
     flex: 1;
     flex-direction: column;
     align-items: right;
-    margin-top: -150px;
+    /* margin-top: -150px; */
+    
+
   }
   
   .hospital-register-image {
@@ -20,22 +22,26 @@
 
 margin: auto;  
   justify-content: right;
-  
-
-        
-
     
   }
+.register-info h2{
+    font-size: 30px;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+  
+ 
   
   .hospital-register-image img {
-    max-width: 200%;
-    height: 120%;
+    max-width: 120%;
+    height: 100%;
     
     /* make this move toward right */
-    margin-right: -120px;
+    /* margin-right: -100px; */
     margin-top: -50px;
     background:transparent;
-    
   }
   
   
