--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,28 +3,32 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  min-height: 100vh;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+/* App.css */
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensure the App takes the full viewport height */
+}
+
+main {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -40,3 +44,19 @@
 .read-the-docs {
   color: #888;
 }
+
+/* Added styles for the footer visibility
+.footer {
+  background-color: rgb(130, 98, 235);
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: -1; /* Initially hide the footer */
+  /* transition: z-index 0.3s ease; Smooth transition for z-index */
+/* } */
+
+/* .footer.visible {
+  z-index: 1; /* Show the footer when it has the .visible class */
+/* } */ 
