--- a/frontend/src/components/Register-page/Register.css
+++ b/frontend/src/components/Register-page/Register.css
@@ -3,7 +3,7 @@
     justify-content: space-around;
     align-items: center;
     padding: 1px;
-    background-color: #f8f8f8;
+    background-color: #f8f8f8;    
     
   }
   
@@ -11,16 +11,15 @@
     flex: 1;
     flex-direction: column;
     align-items: right;
-    /* margin-top: -150px; */
-    
+    justify-content: right;    
 
   }
+  
   
   .hospital-register-image {
     flex: 5;
     display: flex;
 
-margin: auto;  
   justify-content: right;
     
   }
@@ -50,7 +49,7 @@ margin: auto;
     padding: 120px;
     background-color: #f9f9f9; /* Light background color for the form */
     border-radius: 8px;
-    margin-top: -120px;
+    margin-top: auto;
 
     
       }
