--- a/frontend/src/components/Login-page/Login.css
+++ b/frontend/src/components/Login-page/Login.css
@@ -1,13 +1,14 @@
 /* Reset margin and padding for all elements */
 * {
     margin: auto;
-    padding: 0;
+
     /* box-sizing: border-box; Ensure box-sizing consistency */
 }
 
 body {
     display: flex;
     flex-direction: column;
+    
     min-height: 120vh;
   }
 
@@ -17,21 +18,25 @@ body {
     flex-direction: row;
     align-items: center; 
     justify-content: center;
-    background-color: #f8f8f8;
-    margin-top: -100px;
+    /* background-color: #f8f8f8; */
+    margin-top: -70px;
     height: 100vh;
 }
 
 /* Content area styles */
 .hospital-login-content {
     background-color: #fff;
-    color: #333; /* Default text color */
-    padding: 40px;
+    color: #333333a7; /* Default text color */
+    padding: 30px;
     border-radius: 8px;
     max-width: 400px;
-    width: 100%; /* Take full width of container */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-bottom: 20%; 
+    width: 70%;    
+    box-shadow: 0 4px 8px rgba(0, 4, 0, 0.1);
+
+    margin-bottom: 15%;
+    margin-top: 15%;   
+    /* margin-right: 50px;   */
+    margin-left: 50px;
 }
 
 
@@ -39,21 +44,27 @@ body {
 .login-form {
     display: flex;
     flex-direction: column;
+    align-items: right;
+    justify-content: right;
+    padding: 20px;
+
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 
 .form-group label {
     font-weight: bold; /* Bring back bold for labels */
     display: block;
-    color: #7b7171; /* Default text color */
+    margin-bottom: 50px; /* Add margin bottom for spacing */
+    /* color: #d22323; Default text color */
+    
 }
 
 .form-group input {
     width: 100%; /* Full width input */
-    padding: 10px 20px; /* Adjusted padding */
+    padding: 10px 40px; /* Adjusted padding */
     border: none;
     border-bottom: 1px solid #ced4da; /* Bottom border */
     transition: border-color 0.3s ease;
@@ -63,7 +74,7 @@ body {
 
 .form-group input:focus {
     outline: none;
-    border-color: #007bff;
+    border-color: #3277c0;
 }
 
 /* Login button styles */
@@ -118,15 +129,17 @@ body {
     justify-content: flex-start;
     align-items: center;
     padding: 20px;
-    margin-right: 30px; 
+    margin-right: 50px; 
     top: 80px;
 }
 
 .hospital-login-image img {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-    display: block;
+    max-width: 70%;
+    height: 10%;
+    padding-left: 15%;
+    
+    /* border-radius: 8px; */
+    /* display: block; */
 }
 
 /* Image overlay styles */
@@ -141,7 +154,7 @@ body {
 .image-overlay h2 {
     margin: 0;
     font-size: 38px;
-    padding-top: 0.5rem;
-    text-align: center;
+    left: 100px; 
+    padding-top: 10%;
     color: #333; /* Default text color */
 }
