--- a/frontend/src/components/Register-page/Register.css
+++ b/frontend/src/components/Register-page/Register.css
@@ -34,7 +34,7 @@
  
   
   .hospital-register-image img {
-    max-width: 120%;
+    max-width: 100%;
     height: 100%;
     
     /* make this move toward right */
@@ -73,6 +73,8 @@
     align-items: center ;
     margin-bottom: 10px;
     padding: 5px;
+    color: rgb(121, 121, 121)
+    
   }
   
   .form-group label input[type="checkbox"] {
@@ -81,7 +83,7 @@
     -webkit-appearance: none; /* Remove default appearance for Safari */
     width: 0px; /* Adjust size of the checkbox */
     height: 0px;
-    border: 2px solid #0f1010; /* Blue border */
+    border: 1px solid #007bff; /* Blue border */
     border-radius: 10px;
     margin-right: 15px; /* Add space between the checkbox and text */       }
   
@@ -104,4 +106,14 @@
   .form-group label input[type="checkbox"]:checked::after {
     visibility: visible; /* Show the checkmark when checked */
   }
-  
+  .register-button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-top: 10px; /* Add margin top for spacing */
+}
