--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -30,7 +30,7 @@ body, html {
       background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
       padding: 25px;
       border-radius: 10px;
-      margin-bottom: 30%;
+      /* margin-bottom: 30%; */
     }
     
     .centered-box h1 {
