--- a/frontend/src/components/Navbar/Navdoctor.css
+++ b/frontend/src/components/Navbar/Navdoctor.css
@@ -10,8 +10,15 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 10px;
-    
+    width: 99vw;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 90%;
+    padding: 10px 0px;
 }
 
 .logo {
@@ -50,13 +57,13 @@ ul {
 ul li {
     position: relative;
     display: inline-block;
-    margin-right: 20px;
+    /* margin-right: 20px; */
 }
 
 ul li a {
     color: #fff;
     text-decoration: none;
-    padding: 10px 15px; 
+    /* padding: 10px 15px;  */
     display: inline-block;
     transition: all 0.3s ease;
     font-weight: 700;
