--- a/frontend/src/components/Navbar/Navdoctor.css
+++ b/frontend/src/components/Navbar/Navdoctor.css
@@ -10,7 +10,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 99vw;
+    width: 99%;
 }
 
 .container {
