--- a/frontend/src/components/Register-page/Register.css
+++ b/frontend/src/components/Register-page/Register.css
@@ -72,6 +72,11 @@
   margin-bottom: 0px;
 }
 
+.form-group input {
+  width: 80%;
+  margin-bottom: 5px;
+}
+
 .form-group2 {
   color: rgb(121, 121, 121);
   padding: 5px;
@@ -88,6 +93,7 @@
   flex-direction: column;
   gap: 5px;
 }
+
 
 .form-group label {
   display: flex;
