Revert "Merge pull request #54 from Saga690/main"
This reverts commit f602d239c6ee04bbd1b0a5aa8c0c0f73c73e6fd6, reversing
changes made to e60db926c358a323c6419c1f5c04c706259d53b6.

--- a/frontend/src/components/Navbar/Navdoctor.css
+++ b/frontend/src/components/Navbar/Navdoctor.css
@@ -10,15 +10,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 99vw;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    padding: 10px 0px;
+    padding: 10px 10px;
+    
 }
 
 .logo {
@@ -57,13 +50,13 @@ ul {
 ul li {
     position: relative;
     display: inline-block;
-    /* margin-right: 20px; */
+    margin-right: 20px;
 }
 
 ul li a {
     color: #fff;
     text-decoration: none;
-    /* padding: 10px 15px;  */
+    padding: 10px 15px; 
     display: inline-block;
     transition: all 0.3s ease;
     font-weight: 700;
