--- a/frontend/src/components/ViewRecord/ViewRecord.css
+++ b/frontend/src/components/ViewRecord/ViewRecord.css
@@ -13,7 +13,10 @@
     align-items: right;
     /* margin-top: -150px; */
 
+}
 
+.cont {
+    text-align: center;
 }
 
 .hospital-register-image {
@@ -24,13 +27,6 @@
 
 }
 
-.register-info h2 {
-    font-size: 30px;
-    font-weight: 600;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: center;
-}
 
 
 
