--- a/frontend/src/components/User-Dashboard/Dashboard.css
+++ b/frontend/src/components/User-Dashboard/Dashboard.css
@@ -8,7 +8,7 @@
   height: 80vh;
 }
 
- h1 {
+ #reportheader {
   font-display: block ;
   padding-top: 5px;
   font-size: 2.3em;
@@ -16,6 +16,8 @@
   text-align: center;
   font-weight: bold;
   color: #484040;
+  position: absolute;
+  top: 80px;
   text-shadow: 1px 1px 0 #fff;
 }
 
@@ -70,7 +72,10 @@ label > input {
 
 .col-submit {
   text-align: center;
-  padding: 20px;
+  padding: 10px;
+  position: absolute;
+  left: 25%;
+  top: 65%;
 
 }
 
