--- a/frontend/src/components/PatientCard/Card.css
+++ b/frontend/src/components/PatientCard/Card.css
@@ -1,89 +1,97 @@
-.Card{
+.Card {
     width: 324px;
     height: 384px;
     border: 1px solid lightgray;
     margin-bottom: 25px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease, transform 0.3s ease;
 }
 
-.img1{
+.Card:hover {
+    box-shadow: 0 0 20px 8px #7dc5dd;
+    transform: scale(1.05);
+  }
+
+.img1 {
     width: 100%;
     height: 50%;
     object-fit: cover;
 }
 
-.info{
+.info {
     padding: 10px 20px;
     display: flex;
     flex-direction: column;
     gap: 15px;
 }
 
-.user{
+.user {
     display: flex;
     align-items: center;
     gap: 10px;
     font-weight: bold;
     letter-spacing: 0.1px;
     color: purple;
+    justify-content: center;
 }
 
-.pp{
+.pp {
     width: 26px;
     height: 26px;
     border-radius: 50%;
 }
 
-.p{
+.p {
     color: #111;
 }
 
-.star{
+.star {
     display: flex;
     align-items: center;
     gap: 5px;
 }
 
-.simg{
+.simg {
     width: 14px;
     height: 14px;
 }
 
-.sstar{
+.sstar {
     font-size: 14px;
     font-weight: bold;
     color: #ffc108;
 }
 
-.hr{
+.hr {
     height: 0;
-    border: 0.5px solid rgb(239,238,238);
+    border: 0.5px solid rgb(239, 238, 238);
 }
 
-.details{
+.details {
     padding: 10px 20px;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.img2{
+.img2 {
     width: 16px;
     height: 16px;
     cursor: pointer;
 }
 
-.pspan{
+.pspan {
     color: #999;
     font-size: 12px;
 }
 
-.ph2{
+.ph2 {
     color: #555;
     font-size: 18px;
     font-weight: 400;
 }
 
-.link{
+.link {
     text-decoration: none;
     color: inherit;
 }
