Fixes #87:Create dashboard

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,4 +1,4 @@
-
+/* 
 
 @keyframes logo-spin {
   from {
@@ -37,4 +37,4 @@
 
 /* .footer.visible {
   z-index: 1; /* Show the footer when it has the .visible class */
-/* } */ 
+/* }   */
