--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,20 +1,6 @@
-/* :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  overflow:auto;
-  font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #f8f8f8;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-a {
+/*a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
@@ -38,7 +24,7 @@ h1 {
 
 /* * {
   margin: 0;
-} */
+} 
 
 button {
   border-radius: 8px;
@@ -70,4 +56,4 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
