--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -77,3 +77,15 @@ body, html {
     margin: 10px;
   }
 }
+
+@media (max-width: 480px) {
+  .centered-box h1 {
+    font-size: 2rem;
+  }
+  .centered-box p {
+    font-size: 1rem;
+  }
+  .button {
+    font-size: 0.8rem;
+  }
+}
