--- a/frontend/src/components/User-Dashboard/Dashboard.css
+++ b/frontend/src/components/User-Dashboard/Dashboard.css
@@ -1,210 +1,96 @@
 @import url(http://fonts.googleapis.com/css?family=Laila:400,700);
 
+body {
+  font-family: 'Laila', sans-serif;
+  margin: 0;
+}
+
 .dashboard {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-top: -10px;
-    height: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  padding: 20px;
 }
 
 #reportheader {
-    font-display: block;
-    padding-top: 5px;
-    font-size: 2.3em;
-    line-height: 2.45em;
-    text-align: center;
-    font-weight: bold;
-    color: #484040;
-    position: absolute;
-    top: 80px;
-    text-shadow: 1px 1px 0 #fff;
+  font-size: 2.3em;
+  line-height: 2.45em;
+  text-align: center;
+  font-weight: bold;
+  color: #484040;
+  text-shadow: 1px 1px 0 #fff;
+  margin-bottom: 20px;
 }
 
 .dashboardForm {
-    display: block;
-    margin: 50px;
-    overflow: hidden;
-    background: #fff;
-    border: 1px solid #e4e4e4;
-    border-radius: 20px;
-    font-size: 0;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 600px;
+  padding: 20px;
+  background: #fff;
+  border: 1px solid #e4e4e4;
+  border-radius: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-form > div > label {
-    display: block;
-    padding: 30px 30px 20px;
-    font-size: 13px;
-    font-weight: bold;
-    text-transform: uppercase;
-    color: #645e5e;
-    cursor: pointer;
+.dashboardForm > div {
+  margin-bottom: 15px;
 }
 
-form > div.switch > label {
-    padding: 16px 20px 13px;
+.dashboardForm label {
+  font-size: 13px;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: #645e5e;
+  margin-bottom: 5px;
+  display: block;
 }
 
-form > div > .col-4 {
-    height: 76px;
+.dashboardForm input,
+.dashboardForm select,
+.dashboardForm .select {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 14px;
+  color: #555;
+  background-color: #fff;
+  transition: all linear .3s;
 }
 
-label > input {
-    display: inline-block;
-    position: relative;
-    width: 100%;
-    height: 27px;
-    line-height: 27px;
-    margin: 5px -5px 0;
-    padding: 5px 5px 3px;
-    border: none;
-    outline: none;
-    color: #555;
-    background-color: #fff;
-    font-size: 14px;
-    opacity: .4;
-    transition: all linear .3s;
+.dashboardForm input:focus,
+.dashboardForm select:focus,
+.dashboardForm .select:focus {
+  border-color: #1c5d73;
+  outline: none;
 }
 
 .col-submit {
-    text-align: center;
-    padding: 10px;
-    position: absolute;
-    left: 25%;
-    top: 65%;
+  text-align: center;
+  margin-top: 15px;
 }
 
-label > select,
-.select {
-    display: block;
-    width: 100%;
-    padding: 0;
-    color: #555;
-    margin: 16px 0 6px;
-    font-weight: 500;
-    background: transparent;
-    border: none;
-    outline: none;
-    font-size: 14px;
-    opacity: .4;
-    transition: all linear .3s;
+.submitbtn {
+  height: 35px;
+  padding: 0 20px;
+  border: none;
+  border-radius: 20px;
+  font-size: 14px;
+  color: #fff;
+  font-weight: bold;
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+  background-image: linear-gradient(#1c5d73, #1c5d73);
+  cursor: pointer;
+  transition: background-image 0.3s;
 }
 
-label > input:focus,
-label > select:focus,
-.select:focus {
-    opacity: 1;
+.submitbtn:hover {
+  background-image: linear-gradient(#1d6b85, #1d6b85);
 }
 
-button {
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    margin: 0 0 15px 0;
-    font-size: 14px;
-    color: #fff;
-    font-weight: bold;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    outline: none;
-}
-
-button.submitbtn {
-    position: relative;
-    top: 40px;
-    height: 35px;
-    border: none;
-    border-radius: 20px;
-    margin: 0 0 15px 0;
-    font-size: 14px;
-    color: #fff;
-    font-weight: bold;
-    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
-    overflow: hidden;
-    outline: none;
-    background-image: linear-gradient(#1c5d73, #1c5d73);
-}
-
-button.submitbtn:hover {
-    background-image: linear-gradient(#1d6b85, #1d6b85);
-}
-
-button.submitbtn:active {
-    background-image: linear-gradient(#1d6b85, #1d6b85);
-    -moz-box-shadow: inset 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-    box-shadow: inset 0 1px 3px 1px rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 850px) {
-    .dashboard form > div {
-        display: block;
-    }
-
-    .col-submit {
-        display: block;
-        width: 60%;
-        text-align: center;
-        top: auto;
-        left: auto;
-        margin-top: 20px;
-    }
-
-    .col-2,
-    .col-3,
-    .col-4,
-    .col-5 {
-        width: 100%;
-    }
-
-    .col-submit button {
-        width: 80%;
-        margin: 0 auto;
-    }
-
-    /* Adjustments for smaller screens */
-    form > div > label {
-        padding: 20px;
-    }
-
-    label > input {
-        height: 20px;
-        padding: 5px;
-        font-size: 12px;
-    }
-}
-
-@media (min-width: 851px) {
-    .dashboard form > div {
-        display: inline-block;
-        vertical-align: top;
-    }
-
-    .col-submit {
-        width: 50%;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    .col-2 {
-        width: 50%;
-    }
-
-    .col-3 {
-        width: 33.3333333333%;
-    }
-
-    .col-4 {
-        width: 25%;
-    }
-
-    .col-5 {
-        width: 75%;
-    }
-
-    .col-submit button {
-        width: 30%;
-        margin: 15px;
-    }
+.submitbtn:active {
+  background-image: linear-gradient(#1d6b85, #1d6b85);
+  box-shadow: inset 0 1px 3px 1px rgba(0, 0, 0, 0.3);
 }
